clusters/talos-robbinsdale/apps/media/transmission-books/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-books
  template:
    metadata:
      labels:
        app: transmission-books
    spec:
      containers:
      - name: transmission-books
        image: haugene/transmission-openvpn
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        resources:
          limits:
            squat.ai/tun: "1"
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: transmission-books-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: transmission-books-config-ceph
