clusters/talos-robbinsdale/apps/media/transmission-books/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-books
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "transmission-books.rajsingh.info"
    - "transmission-books.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: transmission-books
          port: 9091
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
